<resources>
    <string name="app_name">Smokey</string>
    <string name="action_settings">Settings</string>
    <string name="add_smoke">Add Smoke</string>
    <string name="remove_smoke">Remove Smoke</string>
    <string name="app_motto">Your friendly neighbourhood quitting pet!</string>
    <plurals name="numcigs">
        <item quantity="zero">You have smoked %d cigarettes today!</item>
        <item quantity="one"> You have smoked %d cigarette today!</item>
        <item quantity="other">You have smoked %d cigarettes today!</item>
    </plurals>
    <string name="app_intro">This is Smokey, your very own pet fox!</string>
    <string name="app_intro2">And he is going to help you stop smoking!</string>
    <string name="app_intro3">All you have to do is keep him happy..</string>
    <string name="app_intro4">And he is going to be happy when you don\'t smoke!</string>
    <string name="app_main">Hello %1$s! %2$s looks happy today!</string>
    <string name="stop_smoke">Please stop smoking :(</string>

    <!-- Strings used in the resume popup -->
    <string name="dialog_resume_start">Hey %1$s, it\'s been\u0020</string>
    <string name="dialog_resume_days">%1$s days\u0020</string>
    <string name="dialog_resume_day">one day\u0020</string>
    <string name="dialog_resume_hours">%1$s hours\u0020</string>
    <string name="dialog_resume_hour">one hour\u0020</string>
    <string name="dialog_resume_mins">%1$s minutes\u0020</string>
    <string name="dialog_resume_min">one minute\u0020</string>
    <string name="dialog_resume_end">since your last cigarette.</string>
    <string name="dialog_resume_coma">,\u0020</string>
    <string name="dialog_resume_and">and\u0020</string>
    <string name="dialog_resume_default">Hey %1$s, you just had a cigarette.</string>

    <!-- Strings used in the form -->
    <string name="form_name">Your Name</string>
    <string name="form_dob">Your Birthday</string>
    <string name="form_weight">Your Weight</string>
    <string name="pet_name">Your Pet\'s Name</string>
    <string name="form_header">Before you adopt your new pet, we will need some information!</string>
    <string name="form_txtavgcigs">To help you and your pet with this challenge, we need to know an average number of cigarettes you smoke per day:</string>
    <string name="form_avgcigs">Average Cigarettes/Day</string>

    <string name="form_buttonOK">OK</string>
    <string name="form_buttonRead">Read from DB</string>
    <string name="form_dialogConfirm">Please confirm that the data entered is correct:</string>

    <string name="text_petName">Say hello to %1$s ! From now on, your job will be to keep %2$s happy and healthy and you can do that by smoking as little as possible!</string>

    <string name="title_activity_new_pet">NewPetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
