<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="de.uni_freiburg.informatik.es.cigtrack.MainForm">

    <TextView
        android:id="@+id/text_formheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/form_header"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_formavgcigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/form_txtavgcigs"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/box_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/box_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/form_name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_formheader" />

    <EditText
        android:id="@+id/box_petname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/pet_name"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/box_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/box_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="casual"
        android:hint="@string/form_dob"
        android:inputType="date"
        android:longClickable="false"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/box_petname"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/box_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/form_weight"
        android:focusableInTouchMode="false"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/box_birth"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/box_avgcigs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/form_avgcigs"
        android:inputType="number"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_formavgcigs"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_send"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:inputType="none"
        android:text="@string/form_buttonOK"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/box_avgcigs"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
